AV2 Changelog :: version a4.2

* Water pouches can now hold up to 5 water
* New bending tab icons from FavouriteDragon
* Skills menu opens at current bending
* Regen chi on sleep
* Fire arc does additional damage & push on hit

> Fix penguin, firebender, and airbender name tags being shown
> Fix cracked account issues - gen fake account UUID based on username
> Fix crash when killing entity without a registered lang file name
> Fix wall w/ floating block causing item duplication
> Fix issue w/ summoning sky bison (having to do with IDs)
> Fix air jump not working issues (path block, on edge of block, etc)
> Fix fire arc boomerang not working
> Fix air jump XP not added
> Fix fireballs remaining after firebender entity dies
> Fix bison breeding too often (every 30-60 seconds)
> Fix chat formatting messed up on server console